Fix up docblocks and phpstan.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,7 +7,7 @@ parameters:
     paths:
         - src/
 
-    excludes_analyse:
+    excludePaths:
         - '%rootDir%/../../../src/Generated/*'
         - '%rootDir%/../../../src/Orm/*'
 
