--- a/deploy.spryker-69new.yml
+++ b/deploy.spryker-69new.yml
@@ -159,7 +159,7 @@ groups:
                         services:
                             session:
                                 namespace: 9                                                                                                                 
-            yves:
+            Yves:
                 application: yves
                 endpoints:
                     demo-date-time-configurator.69-new.demo-spryker.com:
@@ -206,7 +206,7 @@ groups:
                     backend-api.us.69-new.demo-spryker.com:
                         store: US
                         entry-point: BackendApi                                              
-            glue:
+            Glue:
                 application: glue
                 endpoints:
                     glue.de.69-new.demo-spryker.com:
