--- a/deploy.spryker-69new.yml
+++ b/deploy.spryker-69new.yml
@@ -267,7 +267,7 @@ docker:
         store: DE
 
     debug:
-        enabled: true
+        enabled: false
         xdebug:
             enabled: false
 
