Make jetbrains dependendy for PHP8 more verbose.

--- a/composer.json
+++ b/composer.json
@@ -991,6 +991,7 @@
         "doctrine/lexer": "^1.0.2",
         "filp/whoops": "^2.7",
         "fzaninotto/faker": "^1.6.0",
+        "jetbrains/phpstorm-stubs":  "dev-master",
         "pdepend/pdepend": "^2.2.4",
         "phpstan/phpstan": "0.12.98",
         "phpunit/phpunit": "^9.5.0",
