Clean up dependencies.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "ext-pgsql": "*",
         "ext-readline": "*",
         "ext-redis": "*",
-        "psr/cache": "^1.0.1",
         "spryker-eco/loggly": "^0.1.0",
         "spryker-eco/payone": "^4.0.0",
         "spryker-shop/agent-page": "^1.10.0",
@@ -974,8 +973,7 @@
         "spryker/zed-request-extension": "^1.0.0",
         "spryker/zed-ui": "^1.0.0",
         "symfony/console": "^4.10.0 || ^5.2.0",
-        "symfony/security-core": "^4.4.13 || ^5.2.8",
-        "willdurand/negotiation": "^3.0"
+        "symfony/security-core": "^4.4.13 || ^5.2.8"
     },
     "require-dev": {
         "codeception/codeception": "^4.1.8",
@@ -988,15 +986,12 @@
         "codeception/phpunit-wrapper": "^8.1.2 || ^9.0.0",
         "codeception/stub": "^3.7.0",
         "composer/package-versions-deprecated": "^1.8.0",
-        "doctrine/lexer": "^1.0.2",
         "filp/whoops": "^2.7",
-        "fzaninotto/faker": "^1.6.0",
         "jetbrains/phpstorm-stubs":  "dev-master",
         "pdepend/pdepend": "^2.2.4",
         "phpstan/phpstan": "0.12.98",
         "phpunit/phpunit": "^9.5.0",
         "psalm/phar": "^4.3.1",
-        "roave/signature": "~1.2.0",
         "spryker-sdk/benchmark": "^0.2.0",
         "spryker-sdk/codeception-phantoman": "^0.1.0",
         "spryker-sdk/composer-constrainer": "^0.2.0",
