--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ _COMPOSER_PREFER_MID: &COMPOSER_PREFER_MID
 _COMPOSER_PREFER_LOWEST: &COMPOSER_PREFER_LOWEST
     - echo "_COMPOSER_PREFER_LOWEST"
     - COMPOSER_MEMORY_LIMIT=-1 composer update --prefer-lowest --optimize-autoloader --no-interaction --prefer-install=auto
+    - COMPOSER_MEMORY_LIMIT=-1 composer require --dev dereuromark/composer-prefer-lowest:dev-master --with-all-dependencies;
 
 _SETUP_WEB_INFRASTRUCTURE: &SETUP_WEB_INFRASTRUCTURE
     - echo "_BROWSER_TESTING_BEFORE_INSTALL_SCRIPT"
@@ -322,6 +323,7 @@ _VALIDATION_SCRIPT_PHP8: &VALIDATION_SCRIPT_PHP8
 _VALIDATION_SCRIPT_PHP_LOWEST: &VALIDATION_SCRIPT_PHP_LOWEST
     - echo "_VALIDATION_SCRIPT"
     - vendor/bin/phpstan analyze
+    - vendor/bin/validate-prefer-lowest -m;
 
 _VALIDATION_FRONT_END_SCRIPT: &VALIDATION_FRONT_END_SCRIPT
     - echo "_VALIDATION_FRONT_END_SCRIPT"
