--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "mikey179/vfsstream": "^1.6",
         "moneyphp/money": "^3.0.0",
         "monolog/monolog": "^1.25.0 || ^2.0.0",
-        "nette/di": "^2.4.7 || ^3.0.0",
+        "nette/di": "^3.0.0",
         "phpdocumentor/graphviz": "^2.0.0",
         "predis/predis": "^1.1.1",
         "propel/propel": "2.0.0-beta1",
@@ -57,35 +57,35 @@
         "ramsey/uuid": "^4.0.1",
         "ruflin/elastica": "^6.0.0 || ^7.0.0",
         "swiftmailer/swiftmailer": "^5.4.5 || ^6.1.0",
-        "symfony-cmf/routing": "^1.3.0 || ^2.0.0",
-        "symfony/config": "^3.4.0 || ^4.0.0 || ^5.0.0",
-        "symfony/console": "^3.4.0 || ^4.0.0 || ^5.2.0",
-        "symfony/debug": "^3.4.0 || ^4.0.0",
+        "symfony-cmf/routing": "^2.0.0",
+        "symfony/config": "^4.0.0 || ^5.0.0",
+        "symfony/console": "^4.0.0 || ^5.2.0",
+        "symfony/debug": "^4.0.0",
         "symfony/error-handler": "^4.4.4 || ^5.0.4",
-        "symfony/event-dispatcher": "^5.1.0",
-        "symfony/filesystem": "^3.4.0 || ^4.1.0 || ^5.1.8",
-        "symfony/finder": "^3.4.0 || ^4.0.0 || ^5.0.0",
-        "symfony/form": "^3.4.20 || ^4.0.15 || ^5.0.0",
+        "symfony/event-dispatcher": "^4.3.0 || ^5.1.0",
+        "symfony/filesystem": "^4.1.0 || ^5.1.8",
+        "symfony/finder": "^4.3.0 || ^5.0.0",
+        "symfony/form": "^4.0.15 || ^5.0.0",
         "symfony/http-client": "^4.4.0 || ^5.0.0",
         "symfony/http-foundation": "^4.4.7 || ^5.0.7",
         "symfony/http-kernel": "^4.4.13 || ^5.1.5",
-        "symfony/intl": "^3.4.0 || ^4.0.0 || ^5.0.0",
+        "symfony/intl": "^4.0.0 || ^5.0.0",
         "symfony/mime": "^4.2.12 < 4.3.0 || ^4.3.8 || ^5.0.0",
-        "symfony/options-resolver": "^3.4.0 || ^4.0.0 || ^5.0.0",
-        "symfony/process": "^3.4.0 || ^4.0.0 || ^5.0.0",
-        "symfony/property-access": "^3.4.0 || ^4.0.0 || ^5.0.0",
+        "symfony/options-resolver": "^4.0.0 || ^5.0.0",
+        "symfony/process": "^4.0.0 || ^5.0.0",
+        "symfony/property-access": "^4.0.0 || ^5.0.0",
         "symfony/routing": "^4.3.0 || ^5.0.0",
         "symfony/security-core": "^4.4.13 || ^5.2.8",
         "symfony/security-http": "^4.4.13 || ^5.2.8",
         "symfony/security-csrf": "^4.4.13 || ^5.0.0",
         "symfony/security-guard": "^4.4.13 || ^5.2.8",
-        "symfony/serializer": "^3.4.0 || ^4.0.0 || ^5.0.0",
-        "symfony/stopwatch": "^3.4.0 || ^4.0.0 || ^5.0.0",
-        "symfony/translation": "^3.4.0 || ^4.4.0 || ^5.0.0",
+        "symfony/serializer": "^4.0.0 || ^5.0.0",
+        "symfony/stopwatch": "^4.0.0 || ^5.0.0",
+        "symfony/translation": "^4.4.0 || ^5.0.0",
         "symfony/translation-contracts": "^2.0.0",
         "symfony/twig-bridge": "^4.3.0 || ^5.0.0",
-        "symfony/validator": "^4.2.0 || ^5.0.0",
-        "symfony/yaml": "^3.4.0 || ^4.0.0 || ^5.0.0",
+        "symfony/validator": "^4.3.11 || ^5.0.0",
+        "symfony/yaml": "^4.0.0 || ^5.0.0",
         "twig/twig": "^1.43.1 || ^2.9.0 || ^3.0.0",
         "voku/anti-xss": "^4.1.20",
         "webmozart/glob": "^4.0.0",
@@ -134,7 +134,6 @@
         "nette/neon": "^3.2.1",
         "spryker-sdk/benchmark": "dev-master",
         "spryker/docker-chromedriver": "dev-master",
-        "spryker-sdk/brancho": "dev-master",
         "spryker-sdk/load-testing": "dev-master",
         "spryker-sdk/security-checker": "dev-master",
         "codeception/c3": "^2.6"
