TE-10139 PHPStan 1.0 upgrade (#6189)
TE-10139 PHPStan 1.0 integration

--- a/composer.json
+++ b/composer.json
@@ -113,7 +113,7 @@
         "stecman/symfony-console-completion": "*",
         "fakerphp/faker": "^1.16.0",
         "filp/whoops": "^2.7",
-        "spryker-sdk/phpstan-spryker": "^0.3.0",
+        "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/composer-constrainer": "dev-master",
         "spryker-sdk/composer-replace": "dev-master",
         "spryker-sdk/spryk": "dev-master as 0.3.1",
@@ -129,7 +129,7 @@
         "codeception/stub": "^3.7.0",
         "psalm/phar": "^4.3.1",
         "sebastian/diff": "*",
-        "phpstan/phpstan": "0.12.98",
+        "phpstan/phpstan": "~1.2.0",
         "symfony/browser-kit": "^4.0.0 || ~5.1.8",
         "nette/neon": "^3.2.1",
         "spryker-sdk/benchmark": "dev-master",
