Update to PHPStan 1.2+

--- a/composer.json
+++ b/composer.json
@@ -990,14 +990,14 @@
         "filp/whoops": "^2.7",
         "jetbrains/phpstorm-stubs":  "dev-master",
         "pdepend/pdepend": "^2.2.4",
-        "phpstan/phpstan": "0.12.98",
+        "phpstan/phpstan": "~1.2.0",
         "phpunit/phpunit": "^9.5.0",
         "psalm/phar": "^4.3.1",
         "spryker-sdk/benchmark": "^0.2.0",
         "spryker-sdk/codeception-phantoman": "^0.1.0",
         "spryker-sdk/composer-constrainer": "^0.2.0",
         "spryker-sdk/load-testing": "^0.1.0",
-        "spryker-sdk/phpstan-spryker": "^0.3.0",
+        "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/security-checker": "^0.1.0",
         "spryker-sdk/spryk": "^0.3.0",
         "spryker-sdk/spryk-gui": "^0.2.0",
