TE-9873: New glue infrastructure (#6053)
TE-9873 Glue Backend API code infrastructure

--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -103,13 +103,27 @@ groups:
                         store: AT
                         services:
                             session:
-                                namespace: 2
+                                namespace:
             glue_eu:
                 application: glue
                 endpoints:
                     glue.de.spryker.local:
                         store: DE
                     glue.at.spryker.local:
+                        store: AT
+            glue_storefront_eu:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.de.spryker.local:
+                        store: DE
+                    glue-storefront.at.spryker.local:
+                        store: AT
+            glue_backend_eu:
+                application: glue-backend
+                endpoints:
+                    glue-backend.de.spryker.local:
+                        store: DE
+                    glue-backend.at.spryker.local:
                         store: AT
             backoffice_eu:
                 application: backoffice
@@ -168,6 +182,16 @@ groups:
                 application: glue
                 endpoints:
                     glue.us.spryker.local:
+                        store: US
+            glue_storefront_us:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.us.spryker.local:
+                        store: US
+            glue_backend_us:
+                application: glue-backend
+                endpoints:
+                    glue-backend.us.spryker.local:
                         store: US
             backoffice_us:
                 application: backoffice
