CC-14427: API: Min/Soft/Max Threshold support. (#6180)
CC-14427 API: Min/Soft/Max Threshold support

--- a/tests/PyzTest/Glue/Carts/codeception.yml
+++ b/tests/PyzTest/Glue/Carts/codeception.yml
@@ -36,6 +36,7 @@ suites:
                 - \SprykerTest\Shared\EntityTag\Helper\EntityTagHelper
                 - \SprykerTest\Shared\ProductRelation\Helper\ProductRelationDataHelper
                 - \SprykerTest\Glue\AuthRestApi\Helper\AuthRestApiHelper
+                - \SprykerTest\Zed\SalesOrderThreshold\Helper\SalesOrderThresholdHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
