--- a/tests/PyzTest/Glue/Checkout/codeception.yml
+++ b/tests/PyzTest/Glue/Checkout/codeception.yml
@@ -36,6 +36,7 @@ suites:
                 - \SprykerTest\Shared\Shipment\Helper\ShipmentMethodDataHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Shared\Payment\Helper\PaymentDataHelper
+                - \SprykerTest\Zed\SalesOrderThreshold\Helper\SalesOrderThresholdHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
