--- a/tests/PyzTest/Glue/UpSellingProducts/codeception.yml
+++ b/tests/PyzTest/Glue/UpSellingProducts/codeception.yml
@@ -32,6 +32,7 @@ suites:
                 - \SprykerTest\Shared\ProductRelation\Helper\ProductRelationDataHelper
                 - \SprykerTest\Glue\AuthRestApi\Helper\AuthRestApiHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \SprykerTest\Zed\SalesOrderThreshold\Helper\SalesOrderThresholdHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
