Use PHP 8 stable.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,7 +178,7 @@ jobs:
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
-            SPRYKER_PLATFORM_IMAGE: spryker/php:8.0RC-alpine
+            SPRYKER_PLATFORM_IMAGE: spryker/php:8.0
             TRAVIS: 1
 
         steps:
@@ -207,7 +207,7 @@ jobs:
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
-            SPRYKER_PLATFORM_IMAGE: spryker/php:8.0RC-alpine
+            SPRYKER_PLATFORM_IMAGE: spryker/php:8.0
             TRAVIS: 1
 
         steps:
@@ -236,7 +236,7 @@ jobs:
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
-            SPRYKER_PLATFORM_IMAGE: spryker/php:8.0RC-alpine
+            SPRYKER_PLATFORM_IMAGE: spryker/php:8.0
             TRAVIS: 1
 
         steps:
