Update dependencies as per core module definitions.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "ext-readline": "*",
         "ext-redis": "*",
         "codeitnowin/barcode": "^3.0.0",
-        "doctrine/inflector": "^1.0.0 || ^2.0.0",
+        "doctrine/inflector": "^1.4.0 || ^2.0.0",
         "egulias/email-validator": "^2.1.22 || ^3.1.1",
         "everon/collection": "~1.0.0",
         "everon/criteria-builder": "~1.1.6",
@@ -118,7 +118,7 @@
         "spryker-sdk/composer-replace": "dev-master",
         "spryker-sdk/spryk": "dev-master as 0.3.1",
         "spryker-sdk/spryk-gui": "dev-master",
-        "dms/phpunit-arraysubset-asserts": "^0.1.0 || ^0.2.0 || ^0.3.0",
+        "dms/phpunit-arraysubset-asserts": "^0.3.0",
         "codeception/phpunit-wrapper": "^9.0.0",
         "codeception/module-rest": "^1.0",
         "codeception/module-phpbrowser": "^1.0.1",
