--- a/data/import/local/full_EU.yml
+++ b/data/import/local/full_EU.yml
@@ -296,6 +296,8 @@ actions:
       source: data/import/common/common/marketplace/merchant_profile_address.csv
     - data_entity: merchant-product-offer
       source: data/import/common/common/marketplace/merchant_product_offer.csv
+    - data_entity: product-offer-shopping-list-item
+      source: data/import/common/common/marketplace/product_offer_shopping_list_item.csv
     - data_entity: merchant-product-option-group
       source: data/import/common/common/marketplace/merchant_product_option_group.csv
     - data_entity: merchant-opening-hours-date-schedule
