--- a/deploy.spryker-sns.yml
+++ b/deploy.spryker-sns.yml
@@ -40,7 +40,7 @@ x-frontend-auth: &frontend-auth
 namespace: spryker-cloud
 tag: '1.0'
 
-environment: docker.dev
+environment: docker
 image:
     tag: spryker/php:7.4
     environment:
@@ -58,8 +58,8 @@ image:
             - newrelic
 
 composer:
-    mode: ''
-    autoload: ''
+    mode: --no-dev
+    autoload: --classmap-authoritative
 
 assets:
     image: fholzer/nginx-brotli:v1.18.0
@@ -152,13 +152,13 @@ groups:
                         store: AT
                         services:
                             session:
-                                namespace: 8   
+                                namespace: 8
                     mp.us.suite-nonsplit.demo-spryker.com:
                         entry-point: MerchantPortal
                         store: US
                         services:
                             session:
-                                namespace: 9                                                                                                                 
+                                namespace: 9
             Yves:
                 application: yves
                 endpoints:
@@ -205,7 +205,7 @@ groups:
                         entry-point: BackendApi
                     backend-api.us.suite-nonsplit.demo-spryker.com:
                         store: US
-                        entry-point: BackendApi                                              
+                        entry-point: BackendApi
             Glue:
                 application: glue
                 endpoints:
