MP-3934 Introduced Product Approval Process + Merchant Context (#6038)
MP-3934 Product Approval Process + Merchant Context

--- a/data/import/common/marketplace_import_config_EU.yml
+++ b/data/import/common/marketplace_import_config_EU.yml
@@ -38,6 +38,8 @@ actions:
       source: data/import/common/common/marketplace/merchant_stock.csv
     - data_entity: payment-method
       source: data/import/common/common/marketplace/payment_method.csv
+    - data_entity: merchant-product-approval-status-default
+      source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/DE/merchant_store.csv
