--- a/data/import/production/full_US.yml
+++ b/data/import/production/full_US.yml
@@ -58,6 +58,8 @@ actions:
       source: data/import/common/US/product_price_schedule.csv
     - data_entity: product-stock
       source: data/import/common/common/product_stock.csv
+    - data_entity: product-approval-status
+      source: data/import/common/common/product_abstract_approval_status.csv
     # Store relation
     - data_entity: product-abstract-store
       source: data/import/common/US/product_abstract_store.csv
@@ -261,6 +263,8 @@ actions:
       source: data/import/common/common/marketplace/warehouse.csv
     - data_entity: merchant-stock
       source: data/import/common/common/marketplace/merchant_stock.csv
+    - data_entity: merchant-product-approval-status-default
+      source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/US/merchant_store.csv
