--- a/data/import/common/marketplace_import_config_US.yml
+++ b/data/import/common/marketplace_import_config_US.yml
@@ -34,6 +34,8 @@ actions:
       source: data/import/common/common/marketplace/merchant_stock.csv
     - data_entity: payment-method
       source: data/import/common/common/marketplace/payment_method.csv
+    - data_entity: merchant-product-approval-status-default
+      source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/US/merchant_store.csv
