--- a/data/import/local/full_EU.yml
+++ b/data/import/local/full_EU.yml
@@ -76,6 +76,8 @@ actions:
       source: data/import/common/AT/product_abstract_store.csv
     - data_entity: product-stock
       source: data/import/common/common/product_stock.csv
+    - data_entity: product-approval-status
+      source: data/import/common/common/product_abstract_approval_status.csv
     - data_entity: product-configuration
       source: data/import/common/common/product_configuration.csv
     - data_entity: category-store
@@ -322,6 +324,8 @@ actions:
       source: data/import/common/common/marketplace/merchant_stock.csv
     - data_entity: product-stock
       source: data/import/common/common/marketplace/product_stock.csv
+    - data_entity: merchant-product-approval-status-default
+      source: data/import/common/common/marketplace/merchant_product_approval_status_default.csv
     # Store relation
     - data_entity: merchant-store
       source: data/import/common/DE/merchant_store.csv
