CC-14448 Add test to check calculation for multiple items with same group key (#6255)
CC-14448: Fixed the removal of discounts after the order is placed.

--- a/tests/PyzTest/Zed/Calculation/codeception.yml
+++ b/tests/PyzTest/Zed/Calculation/codeception.yml
@@ -27,6 +27,8 @@ suites:
                 - \SprykerTest\Shared\Discount\Helper\DiscountDataHelper
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+                - \SprykerTest\Shared\Currency\Helper\CurrencyDataHelper
+                - \SprykerTest\Shared\Discount\Helper\DiscountDataHelper
                 - \SprykerTest\Shared\DiscountPromotion\Helper\DiscountPromotionDataHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Shared\Availability\Helper\AvailabilityDataHelper
