--- a/deploy.support-staging.yml
+++ b/deploy.support-staging.yml
@@ -42,7 +42,7 @@ tag: '1.0'
 
 environment: docker
 image:
-    tag: spryker/php:7.4
+    tag: spryker/php:8.0
     environment:
         SPRYKER_HOOK_BEFORE_DEPLOY: 'vendor/bin/install -r pre-deploy -vvv'
         SPRYKER_HOOK_AFTER_DEPLOY: 'true'
@@ -142,8 +142,8 @@ groups:
                     us.support.cloud.demo-spryker.com:
                         store: US
                         <<: *frontend-auth
-            Zed:
-                application: zed
+            boffice:
+                application: backoffice
                 endpoints:
                     backoffice.de.support.cloud.demo-spryker.com:
                         store: DE
@@ -152,6 +152,30 @@ groups:
                         store: AT
                     backoffice.us.support.cloud.demo-spryker.com:
                         store: US
+            backgw:
+                application: backend-gateway
+                endpoints:
+                    backend-gateway.de.support.cloud.demo-spryker.com:
+                        store: DE
+                        primal: true
+                    backend-gateway.at.support.cloud.demo-spryker.com:
+                        store: AT
+                        primal: true
+                    backend-gateway.us.support.cloud.demo-spryker.com:
+                        store: US
+                        primal: true
+            backapi:
+                application: zed
+                endpoints:
+                    backend-api.de.support.cloud.demo-spryker.com:
+                        store: DE
+                        entry-point: BackendApi
+                    backend-api.at.support.cloud.demo-spryker.com:
+                        store: AT
+                        entry-point: BackendApi
+                    backend-api.us.support.cloud.demo-spryker.com:
+                        store: US
+                        entry-point: BackendApi
             Glue:
                 application: glue
                 endpoints:
@@ -164,7 +188,7 @@ groups:
 services:
     database:
         engine: mysql
-        version: mariadb-10.4
+        version: mariadb-10.5
         root:
             username: 'root'
             password: 'secret'
@@ -189,7 +213,7 @@ services:
                 protocol: tcp
     search:
         engine: elastic
-        version: 7.6
+        version: '7.10'
         endpoints:
             localhost:9200:
                 protocol: tcp
