Modified deploy file.

--- a/deploy.support-staging.yml
+++ b/deploy.support-staging.yml
@@ -79,7 +79,7 @@ regions:
                     name: Spryker No-Reply
                     email: no-reply@support.cloud.demo-spryker.com
             database:
-                database: spryker_support
+                database: support_staging
                 username: spryker
                 password: secret
 
