max-request-body-size

--- a/deploy.support-staging.yml
+++ b/deploy.support-staging.yml
@@ -121,6 +121,8 @@ groups:
         applications:
             Yves:
                 application: yves
+                http:
+                    max-request-body-size: 30m
                 endpoints:
                     demo-date-time-configurator.support.cloud.demo-spryker.com:
                         entry-point: Configurator
@@ -144,6 +146,8 @@ groups:
                         <<: *frontend-auth
             boffice:
                 application: backoffice
+                http:
+                    max-request-body-size: 30m
                 endpoints:
                     backoffice.de.support.cloud.demo-spryker.com:
                         store: DE
