--- a/composer.json
+++ b/composer.json
@@ -1071,14 +1071,7 @@
         "platform": {
             "php": "7.4.15"
         },
-        "preferred-install": {
-            "spryker/*": "source",
-            "spryker-shop/*": "source",
-            "spryker-eco/*": "source",
-            "spryker-middleware/*": "source",
-            "spryker-sdk/*": "source",
-            "*": "dist"
-        },
+        "preferred-install": "dist",
         "use-include-path": true,
         "sort-packages": true,
         "github-protocols": [
