Try to remove not needed primary level dependencies.

--- a/composer.json
+++ b/composer.json
@@ -1040,6 +1040,9 @@
         "spryker/development": "^3.30.1",
         "spryker/docker-chromedriver": "dev-master",
         "spryker/testify": "^3.40.0",
+        "spryker/json-path": "^1.0.0",
+        "spryker/json-schema": "^1.0.0",
+        "spryker/silex": "^2.0.0",
         "spryker/web-profiler": "^1.5",
         "spryker/web-profiler-extension": "*",
         "stecman/symfony-console-completion": "*"
