--- a/composer.json
+++ b/composer.json
@@ -427,6 +427,7 @@
         "spryker/dummy-marketplace-payment": "^0.2.0",
         "spryker/dummy-merchant-portal-gui": "^0.3.0",
         "spryker/dummy-payment": "^2.6.0",
+        "spryker/egulias": "^1.0.0",
         "spryker/elastica": "^6.0.0",
         "spryker/entity-tag": "^1.0.2",
         "spryker/entity-tags-rest-api": "^1.0.0",
