--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "premp:build": "npm run mp:update:paths",
         "mp:build": "ng build",
         "mp:build:watch": "ng build --watch",
-        "mp:build:production": "ng build --prod",
+        "mp:build:production": "ng build --configuration production",
         "mp:test": "ng test",
         "mp:lint": "ng lint",
         "mp:clean": "run-s mp:clean:*",
@@ -57,70 +57,72 @@
         "intersection-observer": "~0.10.0",
         "lodash-es": "~4.17.15",
         "password-validator": "~5.1.0",
-        "rxjs": "~6.6.0",
+        "rxjs": "~7.4.0",
         "string.prototype.startswith": "~0.2.0",
         "whatwg-fetch": "~3.4.0",
-        "zone.js": "~0.10.3"
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-builders/custom-webpack": "~9.1.0",
-        "@angular-devkit/build-angular": "~0.901.11",
-        "@angular/cli": "~9.1.11",
-        "@angular/common": "~9.1.12",
-        "@angular/compiler": "~9.1.12",
-        "@angular/compiler-cli": "~9.1.12",
-        "@angular/core": "~9.1.12",
-        "@angular/language-service": "~9.1.12",
-        "@angular/platform-browser": "~9.1.12",
-        "@angular/platform-browser-dynamic": "~9.1.12",
+        "@angular-builders/custom-webpack": "~12.1.3",
+        "@angular-devkit/build-angular": "~12.2.16",
+        "@angular/cli": "~12.2.16",
+        "@angular/common": "~12.2.16",
+        "@angular/compiler": "~12.2.16",
+        "@angular/compiler-cli": "~12.2.16",
+        "@angular/core": "~12.2.16",
+        "@angular/language-service": "~12.2.16",
+        "@angular/platform-browser": "~12.2.16",
+        "@angular/platform-browser-dynamic": "~12.2.16",
         "@babel/plugin-proposal-class-properties": "~7.10.4",
         "@babel/plugin-transform-runtime": "~7.10.5",
         "@babel/preset-typescript": "~7.10.4",
         "@jsdevtools/file-path-filter": "~3.0.2",
-        "@nrwl/jest": "~9.4.4",
-        "@nrwl/workspace": "~9.4.4",
-        "@prettier/plugin-xml": "^0.13.1",
+        "@nrwl/cli": "~12.10.1",
+        "@nrwl/jest": "~12.10.1",
+        "@nrwl/tao": "~12.10.1",
+        "@nrwl/workspace": "~12.10.1",
+        "@prettier/plugin-xml": "~0.13.1",
         "@spryker/frontend-config.eslint": "~0.0.2",
         "@spryker/frontend-config.prettier": "~0.0.5",
         "@spryker/frontend-config.stylelint": "~0.0.5",
         "@spryker/frontend-config.tslint": "~0.0.5",
         "@spryker/oryx-for-zed": "~2.11.3",
         "@spryker/sass-resources-loader": "~2.0.1-spryker.0.1.0",
-        "@types/jest": "~26.0.4",
-        "@types/node": "~12.11.1",
+        "@types/jest": "~27.0.2",
+        "@types/node": "~14.14.33",
         "@types/webpack": "~4.41.17",
         "autoprefixer": "~8.6.2",
         "babel-loader": "~8.1.0",
         "clean-webpack-plugin": "~1.0.1",
-        "codelyzer": "~5.1.2",
+        "codelyzer": "~6.0.0",
         "commander": "~4.0.1",
         "compression-webpack-plugin": "~5.0.2",
         "copy-webpack-plugin": "~5.1.2",
         "css-loader": "~3.2.0",
         "fast-glob": "~3.1.0",
-        "jest": "~26.1.0",
-        "jest-preset-angular": "~8.2.1",
+        "jest": "~27.2.3",
+        "jest-preset-angular": "~9.0.3",
         "mini-css-extract-plugin": "~0.8.0",
         "node-sass": "~4.14.1",
         "npm-run-all": "~4.1.5",
         "optimize-css-assets-webpack-plugin": "~5.0.1",
         "postcss-loader": "~3.0.0",
-        "prettier": "~2.0.5",
+        "prettier": "~2.5.1",
         "rimraf": "~3.0.2",
         "sass-loader": "~8.0.0",
         "stylelint": "~13.7.1",
         "terser-webpack-plugin": "~4.2.3",
-        "ts-jest": "~26.1.3",
-        "ts-node": "~8.3.0",
-        "tslib": "~1.11.1",
-        "tslint": "~5.20.1",
-        "typescript": "~3.8.3",
+        "ts-jest": "~27.0.5",
+        "ts-node": "~9.1.1",
+        "tslib": "~2.0.0",
+        "tslint": "~6.1.3",
+        "typescript": "~4.2.4",
         "typescript-eslint-parser": "~22.0.0",
         "webpack": "~4.41.2",
         "webpack-merge": "~4.2.2"
     },
     "resolutions": {
-        "typescript": "3.8.3",
+        "typescript": "4.2.4",
         "fsevents": "2.1.3"
     }
 }
