Apps-3467 Updated Spryks. (#6567)
* Apps-3467 Updated Spryks.

--- a/composer.json
+++ b/composer.json
@@ -116,8 +116,7 @@
         "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/composer-constrainer": "dev-master",
         "spryker-sdk/composer-replace": "dev-master",
-        "spryker-sdk/spryk": "dev-master as 0.3.1",
-        "spryker-sdk/spryk-gui": "dev-master",
+        "spryker-sdk/spryk": "dev-master",
         "dms/phpunit-arraysubset-asserts": "^0.3.0",
         "codeception/phpunit-wrapper": "^9.0.0",
         "codeception/module-rest": "^1.0",
