--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,8 +127,6 @@ jobs:
 
             - name: Frontend install-dependencies
               run: |
-                  vendor/bin/console frontend:project:install-dependencies
-                  vendor/bin/console frontend:yves:install-dependencies
                   vendor/bin/console frontend:mp:install-dependencies
 
             - name: Install NPM packages
@@ -151,7 +149,7 @@ jobs:
               run: yarn mp:test
 
             - name: Front-end MP Build
-              run: yarn mp:build
+              run: yarn mp:build:production
 
             - name: Validate propel files
               run: |
