--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,8 @@ jobs:
 
             - name: Frontend install-dependencies
               run: |
+                  vendor/bin/console frontend:project:install-dependencies
+                  vendor/bin/console frontend:yves:install-dependencies
                   vendor/bin/console frontend:mp:install-dependencies
 
             - name: Install NPM packages
