--- a/config/install/ci.yml
+++ b/config/install/ci.yml
@@ -38,7 +38,7 @@ sections:
             command: 'vendor/bin/console translator:generate-cache'
 
         class-resolver-build:
-            command: "vendor/bin/console cache:class-resolver:build"
+            command: 'vendor/bin/console cache:class-resolver:build'
 
     database-migrate:
         queue-setup:
