--- a/config/install/testing.yml
+++ b/config/install/testing.yml
@@ -35,13 +35,13 @@ sections:
             command: 'vendor/bin/console rest-api:build-request-validation-cache'
 
         generate-page-source-map:
-            command: "vendor/bin/console search:setup:source-map"
+            command: 'vendor/bin/console search:setup:source-map'
 
         translator-generate-cache:
-            command: "vendor/bin/console translator:generate-cache"
+            command: 'vendor/bin/console translator:generate-cache'
 
         class-resolver-build:
-            command: "vendor/bin/console cache:class-resolver:build"
+            command: 'vendor/bin/console cache:class-resolver:build'
 
     queue-flush:
         set-permissions:
