--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -3,15 +3,13 @@
     "compilerOptions": {
         "paths": {
             "@mp/*": ["vendor/spryker/*/mp.public-api.ts"],
-            "@mp/polyfills": [
-                "./vendor/spryker/zed-ui/src/Spryker/Zed/ZedUi/Presentation/Components/mp.polyfills.ts"
-            ],
+            "@mp/polyfills": ["./vendor/spryker/zed-ui/src/Spryker/Zed/ZedUi/Presentation/Components/mp.polyfills.ts"]
         }
     },
     "include": [
         "src/Pyz/Zed/ZedUi/Presentation/Components/main.ts",
         "src/Pyz/Zed/ZedUi/Presentation/Components/polyfills.ts",
         "vendor/spryker/*/src/Spryker/Zed/*/Presentation/Components/entry.ts",
-        "src/Pyz/Zed/*/Presentation/Components/entry.ts",
+        "src/Pyz/Zed/*/Presentation/Components/entry.ts"
     ]
 }
