--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,14 +18,23 @@
         "removeComments": true,
         "rootDir": ".",
         "paths": {
-            "@mp/*": ["vendor/spryker/*/mp.public-api.ts"],
-            "@mp/polyfills": [
-                "./vendor/spryker/zed-ui/src/Spryker/Zed/ZedUi/Presentation/Components/mp.polyfills.ts"
+            "@mp/dashboard-merchant-portal-gui": ["vendor/spryker/dashboard-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/dummy-merchant-portal-gui": ["vendor/spryker/dummy-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/merchant-profile-merchant-portal-gui": [
+                "vendor/spryker/merchant-profile-merchant-portal-gui/mp.public-api.ts"
             ],
+            "@mp/product-merchant-portal-gui": ["vendor/spryker/product-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/product-offer-merchant-portal-gui": [
+                "vendor/spryker/product-offer-merchant-portal-gui/mp.public-api.ts"
+            ],
+            "@mp/sales-merchant-portal-gui": ["vendor/spryker/sales-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/security-merchant-portal-gui": ["vendor/spryker/security-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/user-merchant-portal-gui": ["vendor/spryker/user-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/zed-ui": ["vendor/spryker/zed-ui/mp.public-api.ts"],
+            "@mp/*": ["vendor/spryker/*/mp.public-api.ts"],
+            "@mp/polyfills": ["./vendor/spryker/zed-ui/src/Spryker/Zed/ZedUi/Presentation/Components/mp.polyfills.ts"],
             "*": ["*"],
-            "ShopUi/*": [
-                "./vendor/spryker-shop/shop-ui/src/SprykerShop/Yves/ShopUi/Theme/default/*"
-            ]
+            "ShopUi/*": ["./vendor/spryker-shop/shop-ui/src/SprykerShop/Yves/ShopUi/Theme/default/*"]
         }
     },
     "include": [
@@ -35,11 +44,5 @@
         "./src/Pyz/Yves/**/*",
         "./src/Pyz/Zed/**/*"
     ],
-    "exclude": [
-        "**/node_modules/**",
-        "**/*.spec.ts",
-        "public",
-        "dist",
-        "**/dist/**"
-    ]
+    "exclude": ["**/node_modules/**", "**/*.spec.ts", "public", "dist", "**/dist/**"]
 }
