Adjust prettier ignore list.

--- a/.prettierignore
+++ b/.prettierignore
@@ -4,9 +4,7 @@
 /docker/
 /frontend/
 /vendor/
-/public/Yves/assets/
-/public/Zed/assets/
-/public/Backoffice/assets/
+/public/*/assets/**
 **/dist/**
 
 /package-lock.json
