--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
         "@spryker/frontend-config.prettier": "~0.0.5",
         "@spryker/frontend-config.stylelint": "~0.0.5",
         "@spryker/frontend-config.tslint": "~0.0.5",
-        "@spryker/oryx-for-zed": "~2.11.3",
+        "@spryker/oryx-for-zed": "~2.11.4",
         "@spryker/sass-resources-loader": "~2.0.1-spryker.0.1.0",
         "@types/jest": "~27.0.2",
         "@types/node": "~14.14.33",
@@ -103,14 +103,14 @@
         "jest": "~27.2.3",
         "jest-preset-angular": "~9.0.3",
         "mini-css-extract-plugin": "~0.8.0",
-        "node-sass": "~4.14.1",
         "npm-run-all": "~4.1.5",
-        "optimize-css-assets-webpack-plugin": "~5.0.1",
+        "optimize-css-assets-webpack-plugin": "~6.0.1",
         "postcss-loader": "~3.0.0",
         "prettier": "~2.5.1",
         "rimraf": "~3.0.2",
-        "sass-loader": "~8.0.0",
-        "stylelint": "~13.7.1",
+        "sass": "~1.32.13",
+        "sass-loader": "~10.2.0",
+        "stylelint": "~13.13.1",
         "terser-webpack-plugin": "~4.2.3",
         "ts-jest": "~27.0.5",
         "ts-node": "~9.1.1",
@@ -118,7 +118,7 @@
         "tslint": "~6.1.3",
         "typescript": "~4.2.4",
         "typescript-eslint-parser": "~22.0.0",
-        "webpack": "~4.41.2",
+        "webpack": "~4.46.0",
         "webpack-merge": "~4.2.2"
     },
     "resolutions": {
